--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 
-/* Please ❤ this if you like it! */
+
 
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext');
 
-/* #Primary
+/* #Primari
 ================================================== */
 
 body{
@@ -31,7 +31,7 @@ body{
 }
 
 
-/* #Navigation
+/* #Navi
 ================================================== */
 
 .start-header {
@@ -66,7 +66,7 @@ body{
 	padding: 0;
 }
 .navbar-brand img{
-	height: 28px;
+	height: 50px;
 	width: auto;
 	display: block;
   filter: brightness(10%);
@@ -312,6 +312,7 @@ h1 span:nth-child(14){
 h1 span:nth-child(15){
     transition-delay: 1450ms;
 }
+.conta
 #switch,
 #circle {
 	cursor: pointer;
