--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 	line-height: 24px;
 	font-weight: 400;
 	color: #212112;
-	background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat-back.svg');
+
 	background-position: center;
 	background-repeat: repeat;
 	background-size: 7%;
@@ -539,11 +539,31 @@ body.dark .logo img {
 }
 
 
-/*Aboutttttttt */
+.fix1 {
+ position: absolute;
+ left: 5%;
+ flex-shrink: 3;
+ top: 100%;
+}
+
+
+.img1 {
+    position: absolute;
+    right: 0%;
+    top: 15%;
+    width: 75%;
+    border-top-left-radius: 400px ;
+    border-bottom-left-radius: 4000px ;
+    
+    
+   
+    
+}
+
 
 #about{
     height: 573px;
-    background: linear-gradient(rgb(0,0,0,0.50),rgb(0,0,0,0.50)), url(images/vrbg.jpg);
+    background: linear-gradient(rgb(0,0,0,0.50),rgb(0,0,0,0.50)), url(img/vrbg.jpg);
     background-position: center;
     background-repeat: cover;
     display: flex;
