--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body{
 	line-height: 24px;
 	font-weight: 400;
 	color: #212112;
-
 	background-position: center;
 	background-repeat: repeat;
 	background-size: 7%;
@@ -66,7 +65,7 @@ body{
 	padding: 0;
 }
 .navbar-brand img{
-	height: 50px;
+	height: 65px;
 	width: auto;
 	display: block;
   filter: brightness(10%);
@@ -186,7 +185,6 @@ h1{
 	font-weight: 700;
 	color: #212112;
 	text-align: center;
-    position: relative;
 }
 p{
 	text-align: center;
@@ -538,95 +536,19 @@ body.dark .logo img {
   filter: brightness(100%);
 }
 
-
-.fix1 {
- position: absolute;
- left: 5%;
- flex-shrink: 3;
- top: 100%;
+.wide{
+    align-items: right;
 }
 
-
-.img1 {
-    position: absolute;
-    right: 0%;
-    top: 15%;
-    width: 75%;
-    border-top-left-radius: 400px ;
-    border-bottom-left-radius: 4000px ;
-    
-    
-   
-    
+.buttoni{
+    align-items: right;
+    margin-left: 130px;
 }
-/* buy now */
 
-.button{
-    display: flex;
-    justify-content: space-evenly;
-    height: 60px;
-    background-color: rgb(249, 248, 248);
-    align-items: center;
-}
-.button i{
-    margin-left: -190px;
-}
-.button h3{
-	position: relative;
-	top: 5px;
-}
-button {
-    padding: 0.8em 1.8em;
-    border: 2px solid rgb(134, 134, 255);
-    position: relative;
-    overflow: hidden;
-    background-color: transparent;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 16px;
-    transition: .3s;
-    z-index: 1;
-    font-family: inherit;
-    color: rgb(134, 134, 255)2;
-    height: 60px;
-    width: 190px;
-   }
-   
-   button::before {
-    content: '';
-    width: 0;
-    height: 300%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(45deg);
-    background: rgb(134, 134, 255);
-    transition: .5s ease;
-    display: block;
-    z-index: -1;
-   }
-   
-   button:hover::before {
-    width: 105%;
-   }
-   
-   button:hover {
-    color: #111;
-   }
-
-   button a{
-    color: #111;
-    text-decoration: none;
-   }
-
-   .button a:hover{
-    color: #111;
-	text-decoration: none;
-   }
-
+/* about */
 #about{
     height: 573px;
-    background: linear-gradient(rgb(0,0,0,0.50),rgb(0,0,0,0.50)), url(img/vrbg.jpg);
+    background: linear-gradient(rgb(0,0,0,0.50),rgb(0,0,0,0.50)), url(vrbg.jpg);
     background-position: center;
     background-repeat: cover;
     display: flex;
@@ -641,3 +563,68 @@ button {
 #about p{
     color: #fff;
 }
+
+
+.fix1 {
+	position: absolute;
+	left: 5%;
+	flex-shrink: 3;
+	top: 100%;
+   }
+   
+   
+   .img1 {
+	   position: absolute;
+	   right: 0%;
+	   top: 15%;
+	   width: 75%;
+	   border-top-left-radius: 400px ;
+	   border-bottom-left-radius: 4000px ;
+	   
+	   
+	  
+	   
+   }
+
+   .text-form {
+    position: relative;
+    background: url('photo1.PNG') no-repeat center;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    height: 75vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    z-index: -1;
+}
+
+.text-form h2,
+.text-form p {
+    position: relative;
+    z-index: 1;
+}
+
+.text-form h2 {
+    font-size: 1em;
+}
+
+.text-form p {
+    font-size: 1.5em;
+}
+
+.border1 {
+	background-color: #8167a9;
+	width: 20%;
+	height: 30%;
+}
+
+
+/* Center all text within the .text-form */
+
+
+
+
