--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body{
 	transition : all 0.3s ease-out;
 }
 .start-header.scroll-on .navbar-brand img{
-	height: 24px;
+	height: 40px;
 	-webkit-transition : all 0.3s ease-out;
 	transition : all 0.3s ease-out;
 }
@@ -548,7 +548,7 @@ body.dark .logo img {
 /* about */
 #about{
     height: 573px;
-    background: linear-gradient(rgb(0,0,0,0.50),rgb(0,0,0,0.50)), url(vrbg.jpg);
+    background: linear-gradient(rgb(0,0,0,0.50),rgb(0,0,0,0.50)), url(img/vrbg.jpg);
     background-position: center;
     background-repeat: cover;
     display: flex;
@@ -588,7 +588,7 @@ body.dark .logo img {
 
    .text-form {
     position: relative;
-    background: url('photo1.PNG') no-repeat center;
+    background: url('img/photo1.PNG') no-repeat center;
     background-size: cover;
     margin: 0;
     padding: 0;
@@ -599,7 +599,7 @@ body.dark .logo img {
     color: #000;
     font-family: Arial, sans-serif;
     text-align: center;
-    z-index: -1;
+    width: 100%; /* Set width to 100% for responsiveness */
 }
 
 .text-form h2,
@@ -612,15 +612,123 @@ body.dark .logo img {
     font-size: 1em;
 }
 
-.text-form p {
-    font-size: 1.5em;
+@media screen and (min-width: 768px) {
+    .text-form h2 {
+        font-size: 2em;
+    }
+
+    .para {
+        font-size: 3rem;
+		font-weight: 600;
+    }
+
+    .para1 {
+        font-size: 1.5rem;
+		font-weight: 400;
+    }
 }
 
 .border1 {
-	background-color: #8167a9;
-	width: 20%;
-	height: 30%;
+    background-color: transparent;
+    width: 20%;
+    height: 30%;
 }
+
+@media screen and (max-width: 768px) {
+    .border1 {
+        width: 50%;
+        height: 20%;
+    }
+}
+
+
+button {
+	position: relative;
+	display: inline-block;
+	cursor: pointer;
+	outline: none;
+	border: 0;
+	vertical-align: middle;
+	text-decoration: none;
+	background: transparent;
+	padding: 0;
+	font-size: inherit;
+	font-family: inherit;
+   }
+   
+   button.learn-more {
+	width: 12rem;
+	height: auto;
+   }
+   
+   button.learn-more .circle {
+	transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+	position: relative;
+	display: block;
+	margin: 0;
+	width: 3rem;
+	height: 3rem;
+	background: #262d8a;
+	border-radius: 1.625rem;
+   }
+   
+   button.learn-more .circle .icon {
+	transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto;
+	background: #fff;
+   }
+   
+   button.learn-more .circle .icon.arrow {
+	transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+	left: 0.625rem;
+	width: 1.125rem;
+	height: 0.125rem;
+	background: none;
+   }
+   
+   button.learn-more .circle .icon.arrow::before {
+	position: absolute;
+	content: "";
+	top: -0.29rem;
+	right: 0.0625rem;
+	width: 0.625rem;
+	height: 0.625rem;
+	border-top: 0.125rem solid #fff;
+	border-right: 0.125rem solid #fff;
+	transform: rotate(45deg);
+   }
+   
+   button.learn-more .button-text {
+	transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	padding: 0.75rem 0;
+	margin: 0 0 0 1.85rem;
+	color: #262d8a;
+	font-weight: 700;
+	line-height: 1.6;
+	text-align: center;
+	text-transform: uppercase;
+   }
+   
+   button:hover .circle {
+	width: 100%;
+   }
+   
+   button:hover .circle .icon.arrow {
+	background: #fff;
+	transform: translate(1rem, 0);
+   }
+   
+   button:hover .button-text {
+	color: #fff;
+   }
 
 
 /* Center all text within the .text-form */
@@ -628,3 +736,312 @@ body.dark .logo img {
 
 
 
+
+
+/* h2 {
+	color: #000;
+	font-size: 26px;
+	font-weight: 300;
+	text-align: center;
+	text-transform: uppercase;
+	position: relative;
+	margin: 30px 0 60px;
+    margin-top: 60px;
+}
+h2::after {
+	content: "";
+	width: 100px;
+	position: absolute;
+	margin: 0 auto;
+	height: 4px;
+	border-radius: 1px;
+	background: rgb(119, 119, 245);
+	left: 0;
+	right: 0;
+	bottom: -20px;
+    margin-top: 60px;
+} */
+.carousel {
+	margin: 50px auto;
+	padding: 0 70px;
+ margin-top: 250px;
+}
+.carousel .item {
+	color: #747d89;
+	min-height: 325px;
+	text-align: center;
+	overflow: hidden;
+}
+.carousel .thumb-wrapper {
+	padding: 25px 15px;
+	background: #fff;
+	border-radius: 6px;
+	text-align: center;
+	position: relative;
+	box-shadow: 0 2px 3px rgba(0,0,0,0.2);
+}
+.carousel .item .img-box {
+	height: 120px;
+	margin-bottom: 20px;
+	width: 100%;
+	position: relative;
+}
+.carousel .item img {	
+	max-width: 100%;
+	max-height: 100%;
+	display: inline-block;
+	position: absolute;
+	bottom: 0;
+	margin: 0 auto;
+	left: 0;
+	right: 0;
+}
+.carousel .item h4 {
+	font-size: 18px;
+}
+.carousel .item h4, .carousel .item p, .carousel .item ul {
+	margin-bottom: 5px;
+}
+.carousel .thumb-content .btn {
+	color: rgb(119, 119, 245);
+	font-size: 11px;
+	text-transform: uppercase;
+	font-weight: bold;
+	background: none;
+	border: 1px solid rgb(119, 119, 245);
+	padding: 6px 10px;
+	margin-top: 5px;
+	line-height: 16px;
+	border-radius: 20px;
+}
+.carousel .thumb-content .btn:hover, .carousel .thumb-content .btn:focus {
+	color: #fff;
+	background: rgb(119, 119, 245);
+	box-shadow: none;
+}
+.carousel .thumb-content .btn i {
+	font-size: 14px;
+	font-weight: bold;
+	margin-left: 5px;
+}
+.carousel .item-price {
+	font-size: 13px;
+	padding: 2px 0;
+}
+.carousel .item-price strike {
+	opacity: 0.7;
+	margin-right: 5px;
+}
+.carousel-control-prev, .carousel-control-next {
+	height: 44px;
+	width: 40px;
+	background: rgb(119, 119, 245);	
+	margin: auto 0;
+	border-radius: 4px;
+	opacity: 0.8;
+}
+.carousel-control-prev:hover, .carousel-control-next:hover {
+	background: rgb(119, 119, 245);
+	opacity: 1;
+}
+.carousel-control-prev i, .carousel-control-next i {
+	font-size: 36px;
+	position: absolute;
+	top: 50%;
+	display: inline-block;
+	margin: -19px 0 0 0;
+	z-index: 5;
+	left: 0;
+	right: 0;
+	color: #fff;
+	text-shadow: none;
+	font-weight: bold;
+}
+.carousel-control-prev i {
+	margin-left: -2px;
+}
+.carousel-control-next i {
+	margin-right: -4px;
+}		
+.carousel-indicators {
+	bottom: -50px;
+}
+.carousel-indicators li, .carousel-indicators li.active {
+	width: 10px;
+	height: 10px;
+	margin: 4px;
+	border-radius: 50%;
+	border: none;
+}
+.carousel-indicators li {	
+	background: rgba(0, 0, 0, 0.2);
+}
+.carousel-indicators li.active {	
+	background: rgba(0, 0, 0, 0.6);
+}
+.carousel .wish-icon {
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	z-index: 99;
+	cursor: pointer;
+	font-size: 16px;
+	color: #abb0b8;
+}
+.carousel .wish-icon .fa-heart {
+	color: #ff6161;
+}
+.star-rating li {
+	padding: 0;
+}
+.star-rating i {
+	font-size: 14px;
+	color: #ffc000;
+}
+
+
+
+footer {
+	width: 100%;
+	position: relative;
+	bottom: 0;
+	background: linear-gradient(to right, #4F0B64, #096E59);
+	color: #fff;
+	padding: 60px 0 30px; /* Adjusted padding */
+	border-top-left-radius: 50px; /* Reduced border radius */
+	font-size: 1rem; 
+  }
+  
+  .row {
+	width: 85%;
+	margin: auto;
+	display: flex;
+	flex-wrap: wrap;
+	align-items: flex-start;
+	justify-content: space-between;
+  }
+  
+  .col {
+	flex-basis: 30%;
+	padding: 10px;
+	font-size: 1rem;
+	color: white;
+	text-align: center;
+  }
+  
+  .col p {
+	text-align: center;
+	margin-bottom: 8px;
+  }
+  
+  .email-id {
+	width: fit-content;
+	border-bottom: 1px solid #ccc;
+	margin: 20px auto;
+	display: inline-block;
+  }
+  
+  .col h3 {
+	margin-bottom: 20px;
+	position: relative;
+  }
+  
+  .col .social-icons a {
+	color: #fff;
+	margin-right: 10px;
+  }
+  
+  .copyright {
+	font-size: 0.9rem;
+	text-align: center; /* Center align the copyright text */
+  }
+  
+  .logo1 {
+	width: 350px;
+	margin: 30px auto; /* Center align the logo */
+  }
+  
+  .col h3 {
+	width: fit-content;
+	margin-left: 180px;
+	position: relative;
+  }
+  
+  .email-id {
+	width: fit-content;
+	border-bottom: 1px solid #ccc;
+	margin: 40px auto; /* Center align the email-id section */
+  }
+  
+  ul li {
+	list-style: none;
+	margin-bottom: 12px;
+  }
+  
+  .li1 {
+	text-decoration: none;
+	color: white;
+	margin-bottom: 20px;
+	list-style: none;
+  }
+  
+  .social-icons .fa-brands {
+	width: 34px;
+	height: 30px;
+	border-radius: 50%;
+	text-align: center;
+	line-height: 30px;
+	font-size: 20px;
+	color: #000;
+	background-color: #fff;
+	margin: 0 auto; /* Center align social icons */
+  }
+  
+  .copyright {
+	position: absolute;
+	bottom: 10px; /* Adjusted positioning for the copyright */
+	width: 100%;
+	text-align: center;
+	font-size: 0.9rem;
+  }
+  
+
+  .shkrimi {
+	align-items: center;
+	text-align: center;
+  }
+
+
+  .button{
+    display: flex;
+    justify-content: space-evenly;
+    height: 60px;
+    background-color: rgb(249, 248, 248);
+    align-items: center;
+}
+.button i{
+    margin-left: -200px;
+}
+
+
+  #quote{
+    padding: 150px 0;
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(img/vrbg.jpg);
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    text-align: center;
+}
+#quote .text-wrapper h2{
+    color: rgba(255, 255, 255, 0.9);
+    font-size: 24px;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    margin-bottom: 10px;
+}
+#quote .text-wrapper h1{
+    color: white;
+    font-family: var(--font-family-2);
+    font-size: 60px;
+}
